# face_recognition_tracking_paper_inference

./: .gitignore  inference.py  main.py  pyproject.toml
configurations/: __init__.py  config.py
embedding_extraction/: extract.py
face_recognition_tracking/: inference.py  main.py
face_recognition_tracking/configurations/: __init__.py  config.py
face_recognition_tracking/embedding_extraction/: BaseExtractor.py  EmbeddingExtractionfactory.py  VGGEmbeddingExtractor.py  __init__.py  extract.py
face_recognition_tracking/face_extraction/: BaseDetector.py  FaceDetectionFactory.py  HaarcascadesFaceDetector.py  __init__.py  inference.py
face_recognition_tracking/search/: __init__.py  vector_db.py
face_recognition_tracking/utils/: __init__.py  image.py
utils/: image.py
