[tool.poetry]
name = "face-recognition-tracking"
version = "0.1.0"
description = "Recognize the faces, assign the labels and track them"
authors = ["Gaurav Neupane"]
license = "MIT"
readme = "README.md"
packages = [{include = "face_recognition_tracking"}]

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "2.16.1"
image = "^1.5.33"
opencv-python = "^4.10.0.84"
keras = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
